# ruler-trace

./: .editorconfig  CMakeLists.txt  README.md
doc/: format.md
examples/: CMakeLists.txt
examples/inputs/: CMakeLists.txt  main.cpp
examples/writer/: CMakeLists.txt  main.c
reader/: CMakeLists.txt
reader/include/: rtc_reader.h
reader/include/rtc/: cursor.h  exception.h  reader.h  stream.h  util.h
reader/src/: cursor.cpp  rtc_reader.cpp  stream.cpp
scripts/: build.sh
src/: CMakeLists.txt  dump.cpp  dump.h  getopt_mini.h  help.cpp  help.h  rulert.cpp
writer/: CMakeLists.txt  rtc_writer.c  rtc_writer.h
